<resources>
    <string name="app_name">MerkaEasy</string>
    <string name="registerTitle">Registro</string>
    <string name="register">Registrar</string>
    <string name="logo">Logo</string>
    <string name="loginTitle">Ingresar</string>
    <string name="login">Iniciar Sesion</string>
    <string name="email">Correo Electronico</string>
    <string name="password">Contraseña</string>
    <string name="phone">Telefono</string>
    <string name="logoProfile">Logo Profile</string>
    <string name="passwordConfirm">Confirmar Constraseña</string>
    <string name="adress">Direccion</string>
    <string name="haveAccount">¿Ya tienes una cuenta?</string>
    <string name="loginMe">Iniciar Sesion</string>
    <string name="noHaveAccount">¿No tienes una cuenta aun?</string>
    <string name="registerMe">Registrate</string>
    <string name="products">Productos</string>
    <string name="fullName">Nombre Completo</string>
    <string name="welcome">Bienvenido a MerkaEasy!!</string>
    <string name="welcomemessage">Para disfrutar de una experiencia de compra personalizada, por favor inicie sesión en su cuenta. En Merkaeasy, te ofrecemos una amplia variedad de productos y servicios diseñados para satisfacer tus necesidades.</string>
    <string name="cart">Carrito</string>
</resources>