<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".RegisterActivity">

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_regular"
            android:text="@string/haveAccount"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/registeButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.239"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirm_password"
            app:layout_constraintVertical_bias="0.151"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/loginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_regular"
            android:text="@string/loginMe"
            android:textColor="@color/greenMain"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/registeButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.621"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirm_password"
            app:layout_constraintVertical_bias="0.151"
            tools:ignore="TextSizeCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/app_name"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.466"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.081" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="219dp"
            android:layout_height="158dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/icono"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.413"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintVertical_bias="0.018" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="84dp"
            android:layout_height="30dp"
            android:layout_marginTop="64dp"
            android:fontFamily="@font/ubuntu_regular"
            android:text="@string/register"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            tools:ignore="TextSizeCheck" />

        <EditText
            android:id="@+id/fullname"
            android:layout_width="268dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/rounded_frame"
            android:ems="10"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/fullName"
            android:inputType="text"
            android:padding="12dp"
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            tools:ignore="TextSizeCheck,DuplicateSpeakableTextCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/ubuntu_regular"
            android:text="@string/fullName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.256"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="76dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/ubuntu_regular"
            android:text="@string/email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fullname" />

        <EditText
            android:id="@+id/email"
            android:layout_width="268dp"
            android:layout_height="48dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/rounded_frame"
            android:ems="10"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11"
            app:layout_constraintVertical_bias="0.026"
            tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck,TextFields,TextSizeCheck" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/ubuntu_regular"
            android:text="@string/phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.205"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="268dp"
            android:layout_height="48dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/rounded_frame"
            android:ems="10"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/phone"
            android:inputType="phone"
            android:padding="12dp"
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.477"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13"
            app:layout_constraintVertical_bias="0.018"
            tools:ignore="TextSizeCheck,DuplicateSpeakableTextCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/ubuntu_regular"
            android:text="@string/adress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.206"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone" />

        <EditText
            android:id="@+id/adress"
            android:layout_width="268dp"
            android:layout_height="48dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/rounded_frame"
            android:ems="10"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/adress"
            android:inputType="text"
            android:padding="12dp"
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.477"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView14"
            app:layout_constraintVertical_bias="0.015"
            tools:ignore="TextSizeCheck,DuplicateSpeakableTextCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/ubuntu_regular"
            android:text="@string/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.206"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/adress" />

        <EditText
            android:id="@+id/password"
            android:layout_width="268dp"
            android:layout_height="48dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/rounded_frame"
            android:ems="10"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.459"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView15"
            app:layout_constraintVertical_bias="0.025"
            tools:ignore="TextSizeCheck,DuplicateSpeakableTextCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/ubuntu_regular"
            android:text="@string/passwordConfirm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.26"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="268dp"
            android:layout_height="48dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/rounded_frame"
            android:ems="10"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/passwordConfirm"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.459"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView16"
            app:layout_constraintVertical_bias="0.036"
            tools:ignore="TextSizeCheck,DuplicateSpeakableTextCheck,TextContrastCheck" />

        <Button
            android:id="@+id/registeButton"
            android:layout_width="200sp"
            android:layout_height="48dp"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="200sp"
            android:backgroundTint="@color/greenMain"
            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/register"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirm_password"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="TextSizeCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
